--- a/TechYugaAI/wwwroot/app.css
+++ b/TechYugaAI/wwwroot/app.css
@@ -122,7 +122,7 @@ body.theme-dark .btn-default {
     border-bottom-color: #d4d6da;
 }
 
-.cv-left .chat-container[b-1ymnx3spqv]{
+body.theme-dark .cv-left .chat-container[b-1ymnx3spqv]{
     background-color: #0b0f14 !important;
 }
 
